--- a/css/modules.css
+++ b/css/modules.css
@@ -110,6 +110,7 @@
 }
 
 .filmImg {
+  max-width: 100%;
   border-radius: 10px;
 }
 
